test-fixtures/machine-dsl-tests/tests/compile_fail/canonical_transition_signal_rejects_string_identity.stderr
error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> tests/compile_fail/canonical_transition_signal_rejects_string_identity.rs:11:13
   |
11 |     let _ = meerkat_machine_kernels::generated::meerkat::transition_signal(&state, &signal);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^         ------- argument #2 of type `meerkat_machine_schema::catalog::dsl::meerkat_machine::MeerkatMachineSignal` is missing
   |
note: function defined here
  --> $WORKSPACE/meerkat-machine-kernels/src/generated/meerkat.rs
   |
   | pub fn transition_signal<C: Context>(
   |        ^^^^^^^^^^^^^^^^^
help: provide the argument
   |
11 |     let _ = meerkat_machine_kernels::generated::meerkat::transition_signal(&state, /* meerkat_machine_schema::catalog::dsl::meerkat_machine::MeerkatMachineSignal */, &signal);
   |                                                                                    ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
